--- a/app/src/main/res/menu/options.xml
+++ b/app/src/main/res/menu/options.xml
@@ -1,13 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/notes"
+        android:icon="@drawable/ic_action_edit"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/notes" />
+    <item
+        android:id="@+id/update"
+        android:icon="@drawable/ic_action_refresh"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/download_update">
+    </item>
+    <item
+        android:id="@+id/settings"
+        android:icon="@drawable/ic_action_settings"
+        android:showAsAction="never"
+        android:title="@string/settings" />
+    <item
         android:id="@+id/help"
         android:icon="@drawable/ic_action_help"
-        android:title="@string/help">
-    </item>
+        android:title="@string/help" />
     <item
         android:id="@+id/about"
         android:icon="@drawable/ic_action_about"
-        android:title="@string/about">
-    </item>
+        android:title="@string/about" />
 </menu>
